# rust_api_server

./: .env  Cargo.toml  README.md
src/: main.rs
src/controllers/: user_controller.rs
src/handlers/: mod.rs  routeshandlers.rs
src/middlewares/: auth.rs
src/models/: mod.rs  users.rs  wallet.rs
src/routers/: api.rs
src/utils/: crypto.rs  errors.rs  jwt.rs  mod.rs  rands.rs  response.rs
