[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
sqlx = {version = "0.8.2",features = ["mysql","runtime-tokio-native-tls",'rust_decimal']}
serde = {version = "1.0.215",features = ["derive"]}
serde_json = "1.0.133"
futures = "0.3.31"
futures-util = "0.3.31"
tokio = {version = "1.41.1",features = ["full"]}
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
rand = {version = "0.8.5",features = ["default"]}
secp256k1 = {version = "0.30.0",features = ["rand"]}
sha2 = "0.10.8"
rust_decimal = "1.36.0"
md-5 = "0.10.0"
env_logger = "0.11.5"